Edit upload files